--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts":  {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "npm run build && vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
