--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "optionalDependencies": {
     "fsevents": "*"
   },
-  "scripts":  {
+  "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -17,6 +17,7 @@
     "@react-three/drei": "^9.57.2",
     "@react-three/fiber": "^8.12.0",
     "@react-three/postprocessing": "^2.7.0",
+    "build": "^0.1.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,6 +29,6 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.2.0"
+    "vite": "^4.2.1"
   }
 }
