--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "npm run build &&vite preview",
+    "preview": "vite preview",
     "serve": "npm run build && vite preview"
   },
   "dependencies": {
